# nive_datastore

./: .gitignore  MANIFEST.in  changes.txt  i18n.sh  pyproject.toml  readme.md  setup.cfg  setup.py
nive_datastore/: app.py  i18n.py  item.py  pydispatch.py  root.py
nive_datastore/locale/: datastore.pot  nive_datastore.pot
nive_datastore/locale/de/LC_MESSAGES/: nive_datastore.mo  nive_datastore.po
nive_datastore/scaffolds/: __init__.py
nive_datastore/scaffolds/default/: setup.py_tmpl
nive_datastore/scaffolds/default/+package+/: __init__.py_tmpl  tests.py_tmpl
nive_datastore/tests/: __local.py  db_app.py  test_app.py  test_configuration.py
nive_datastore/webapi/: __init__.py  view.py
nive_datastore/webapi/tests/: bookmark.pt  test_configuration.py  test_dispatch.py  test_views.py
