[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nive_datastore"
version = "1.5.1"
authors = [{name = "Arndt Droullier", email = "info@nive.co"}, {name = "Nive GmbH"}]
license = {text = "GPL 3"}
description = "Nive Data Storage - High level storage for structured data"
keywords = [
    "collection",
    "storage",
    "workflow",
    "forms",
    "pyramid",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls = {Homepage = "https://niveapps.com/"}
dependencies = ["nive>=1.5.1", "nive_userdb>=1.5.1"]

[project.readme]
text = """
# Nive Data Storage
Maintenance release. No active development.
The source code is hosted on github: https://github.com/nive/nive_datastore
"""
content-type = "text/markdown"

[project.optional-dependencies]
testing = ["nive>=1.5.1", "nive_userdb>=1.5.1"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}
